// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureActiveDirectoryCommandBar matches snapshot when token is not present 1`] = `
<StyledCommandBarBase
  items={
    [
      {
        "ariaLabel": "authentication.azureActiveDirectory.command.login",
        "iconProps": {
          "iconName": "Signin",
        },
        "key": "signin",
        "onClick": [Function],
        "text": "authentication.azureActiveDirectory.command.login",
      },
      {
        "ariaLabel": "authentication.authSelection.switchAuthType",
        "iconProps": {
          "iconName": "NavigateBack",
        },
        "key": "switch",
        "onClick": [Function],
        "text": "authentication.authSelection.switchAuthType",
      },
    ]
  }
/>
`;

exports[`AzureActiveDirectoryCommandBar matches snapshot when token is present 1`] = `
<StyledCommandBarBase
  items={
    [
      {
        "ariaLabel": "authentication.azureActiveDirectory.command.logout",
        "iconProps": {
          "iconName": "Signout",
        },
        "key": "signout",
        "onClick": [Function],
        "text": "authentication.azureActiveDirectory.command.logout",
      },
      {
        "ariaLabel": "authentication.authSelection.switchAuthType",
        "iconProps": {
          "iconName": "NavigateBack",
        },
        "key": "switch",
        "onClick": [Function],
        "text": "authentication.authSelection.switchAuthType",
      },
    ]
  }
/>
`;
